--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
   {% endif %}
   {% if page.image %}
     <div class="featured-image">
-      <img src="{{ site.url }}/assets/img/{{ page.image }}">
+      <img src="{{ site.url }}/assets/img/posts/{{ page.image }}">
     </div>
   {% endif %}
   <article>
