--- a/_includes/featured-post.html
+++ b/_includes/featured-post.html
@@ -1,6 +1,6 @@
 <article>
   <a href="{{ site.url }}{{ post.url }}">
-    <div class="featured-post" {% if post.image %}style="background-image:url({{ site.url }}/assets/img/{{ post.image }})"{% endif %}>
+    <div class="featured-post" {% if post.image %}style="background-image:url({{ site.url }}/assets/img/posts/{{ post.image }})"{% endif %}>
       <h2><span>{{ post.title }}</span></h2>
     </div>
   </a>
