--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ title: home
 
 <!-- Pagination links -->
 <div class="pagination">
-    <a class="pagination-button pagination-active" href="{{ site.baseurl }}{/all-posts}">{{ site.data.settings.pagination.all_posts }}</a>
+    <a class="pagination-button pagination-active" href="{{ site.baseurl }}/all-posts">{{ site.data.settings.pagination.all_posts }}</a>
 <!--
   {% if paginator.previous_page %}
     <a class="pagination-button pagination-active" href="{{ site.baseurl }}{{ paginator.previous_page_path }}">{{ site.data.settings.pagination.next_page }}</a>
