[paginate] pagination buttons

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,19 +7,7 @@ title: home
   {% include featured-post.html %}
 {% endfor %}
 
-<!-- Pagination links -->
+<!-- View all posts button -->
 <div class="pagination">
     <a class="pagination-button pagination-active" href="{{ site.baseurl }}/all-posts">{{ site.data.settings.pagination.all_posts }}</a>
-<!--
-  {% if paginator.previous_page %}
-    <a class="pagination-button pagination-active" href="{{ site.baseurl }}{{ paginator.previous_page_path }}">{{ site.data.settings.pagination.next_page }}</a>
-  {% else %}
-    <span class="pagination-button">{{ site.data.settings.pagination.next_page }}</span>
-  {% endif %}
-  {% if paginator.next_page %}
-    <a class="pagination-button pagination-active next" href="{{ site.url }}{{ paginator.next_page_path }}">{{ site.data.settings.pagination.previous_page }}</a>
-  {% else %}
-    <span class="pagination-button">{{ site.data.settings.pagination.previous_page }}</span>
-  {% endif %}
--->
 </div>
