--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,11 @@ layout: default
 title: home
 ---
 
+<div class="masthead" style="background-image:url({{ site.url }}/assets/img/journals.jpg)">
+  <h1><span>hello!</span></h1>
+  <h2><span>welcome~ please hmu with thoughts or questions regarding anything you read, i wanna talk with you :)</span></h2>
+</div>
+
 {% for post in paginator.posts %}
   {% include featured-post.html %}
 {% endfor %}
