--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,5 +1,9 @@
+/*
+  Featured Post
+*/
+
 .featured-post {
-  height: 400px;
+  height: 300px;
   margin: 5px 10px 10px;
   background-position: center;
   background-repeat: no-repeat;
@@ -53,4 +57,54 @@
 }
 .pagination-active:hover {
   background-color: #e0e0e0;
+}
+
+/*
+  Masthead
+*/
+
+.masthead{
+  height: 500px;
+  margin: 5px 10px 10px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.masthead h2 {
+  bottom: 0;
+  margin: 0;
+  padding: 10px;
+  position: absolute;
+  text-align: center;
+}
+.masthead h2 span {
+  display: inline-block;
+  color: white;
+  font: bold 24px/45px Helvetica, Sans-Serif;
+  letter-spacing: -1px;
+  background: rgb(0, 0, 0); /* fallback color */
+  background: rgba(0, 0, 0, 0.7);
+  padding: 10px;
+  text-align: center;
+}
+.masthead span a {
+  color: white;
+}
+.masthead h1 {
+  bottom: 0;
+  margin: 10px;
+  padding: 10px;
+  position: absolute;
+  text-align: center;
+}
+.masthead h1 span {
+  display: inline-block;
+  color: white;
+  font: bold 30px/48px Helvetica, Sans-Serif;
+  letter-spacing: -1px;
+  background: rgb(0, 0, 0); /* fallback color */
+  background: rgba(0, 0, 0, 0.7);
+  padding: 10px;
+  text-align: center;
 }
