[masthead] change style

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,8 +1,6 @@
-<article>
-  <a href="{{ site.url }}">
-    <div class="masthead" style="background-image:url({{ site.url }}/assets/img/journals.jpg)">
-      <h2><span>hello! <br \>
-          welcome~ please hmu with thoughts or questions regarding anything you read, i wanna talk with you :)</span></h2>
-    </div>
-  </a>
-</article>
+<header class="masthead" style="background-image:url({{ site.url }}/assets/img/journals.jpg); min-height: 70%;">
+  <div class="container">
+    <h2><span>hello! <br \>
+        welcome~ please hmu with thoughts or questions regarding anything you read, i wanna talk with you :)</span></h2>
+  </div>
+</header>
