--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -64,25 +64,27 @@
 */
 
 .masthead {
-  height: 500px;
-  margin: 5px 10px 10px;
-  background-position: center;
-  background-repeat: no-repeat;
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
+  background: no-repeat center center scroll;
   background-size: cover;
   position: relative;
+  height: 15rem;
+  max-width: $container-width;
 }
 .masthead h2 {
   text-align: center;
   bottom: 0;
   margin: 0;
   padding: 10px;
-  position: absolute;
+  vertical-align: middle;
 }
 .masthead h2 span {
-  text-align: center;
   display: inline-block;
   color: white;
-  font: bold 24px/45px Helvetica, Sans-Serif;
+  font: 1em;
+  font-weight: normal;
+  line-height: 1.15;
   letter-spacing: -1px;
   background: rgb(0, 0, 0); /* fallback color */
   background: rgba(0, 0, 0, 0.7);
@@ -91,20 +93,15 @@
 .masthead span a {
   color: white;
 }
-.masthead h1 {
-  bottom: 0;
-  margin: 10px;
-  padding: 10px;
-  position: absolute;
-  text-align: center;
-}
-.masthead h1 span {
-  display: inline-block;
-  color: white;
-  font: bold 30px/48px Helvetica, Sans-Serif;
-  letter-spacing: -1px;
-  background: rgb(0, 0, 0); /* fallback color */
-  background: rgba(0, 0, 0, 0.7);
-  padding: 10px;
-  text-align: center;
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  overflow: hidden;
+  vertical-align: middle;
+  justify-content: center !important;
+  margin-top: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
 }
