[home] edit home page

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,6 +1,7 @@
-<header class="masthead" style="background-image:url({{ site.url }}/assets/img/journals.jpg); min-height: 70%;">
+<header class="masthead" >
   <div class="container">
-    <h2><span>hello! <br \>
-        welcome~ please hmu with thoughts or questions regarding anything you read, i wanna talk with you :)</span></h2>
+    <h2>hello! <br \>
+      welcome~ please hmu with thoughts or questions regarding anything you read, <br \>
+      i'd love to chat with you :)</h2>
   </div>
 </header>
