--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -14,7 +14,7 @@
   padding-top: $header-thickness+10px;
   margin: auto;
   display: block;
-  width: $container-width - 20px;
+  width: $container-width;
 }
 .content-wrapper h1 {
   margin: 20px 0px 5px;
