[style] home page

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,7 +1,5 @@
 <header class="masthead" >
   <div class="container">
-    <h2>hello! <br \>
-      welcome~ please hmu with thoughts or questions regarding anything you read, <br \>
-      i'd love to chat with you :)</h2>
+    <h2> welcome :)</h2>
   </div>
 </header>
