--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -79,13 +79,12 @@
   text-align: center;
   vertical-align: middle;
   justify-content: center !important;
-  color: grey;
 }
 .masthead h2 span {
   display: inline-block;
   color: white;
   font: 1em;
-  font-weight: normal;
+  font-weight: thin;
   line-height: 1.15;
   letter-spacing: -1px;
   background: rgb(0, 0, 0); /* fallback color */
