--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,6 +7,8 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
+  # background-color: #2a2f4a;
+  # color: #ffffff
 }
 
 /*
